# cpc-paths

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: per_machine_setup.md
src/: config.rs  error.rs  health.rs  lib.rs  platform.rs  resolver.rs
tests/: integration.rs
